@@ -3,6 +3,7 @@
 - added ascii (ANSI.SYS) color to screen output hpgUtils.c hpgUtils.h
 - The Win32 "Command Prompt" does not recognize ANSI.SYS escape sequences at
 all.
+- the .ZIP source code distribution now includes the examples
 
 *Fri Nov 26 2010 Henri Gavin <.> 0.20100105
 - updated user-manual.html with Gnuplot links to www.gnuplot.info
